# nanoverse

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
AA_Demo/ac_Atmos/: 03_atmos-CPU.c
AA_Demo/ad_Lorenz/: 00_Dyn-6D.c  matrix4x4f.c  toolbox.h  vector-f_ops.c
C++/Bullet/: 00_hello-world.cpp  Install-Bullet.md
C++/CGAL/: 00_cuboid.cpp  01_boolean.cpp
C++/Emscripten/: install.md
C++/Godot/: 3D_Platformer_Example.md
C++/OpenCV/: 00-1_ORB-detect.cpp  00-2_edge-detect.cpp  00-4_AKAZE-detect.cpp  00_Asteroid.cpp  00_feat-detect.cpp  01_SFM_bgn.cpp  01_SfM_bgn.cpp  CMakeLists.txt  SfM.cpp  SfM.hpp  helpers.cpp  helpers.hpp  image_proc.cpp  install.md  utils.cpp
C++/OpenCV/00_Asteroid/: 00_Asteroid.cpp  CMakeLists.txt  SfM.hpp  SfM_DEV.md  helpers.cpp  install.md
C++/OpenCV/10_Sculpture/: 00_test_01.cpp  01_pcd-display.cpp  02_pcd-test.cpp  03_six-image.cpp  03_three-image.cpp  04_six-cleanup.cpp  CMakeLists.txt  DEV_PLAN.md  Delaunay.cpp  Delaunay.hpp  Fit.cpp  Geo.hpp  Geometry.cpp  Image.cpp  OGL_Display.cpp  SfM.hpp  Structure.cpp  Visualize.cpp  install.md  make.sh
C++/OpenCV/10_Sculpture/aa_Calibration/: 02_calibrate.py
C++/OpenCV/10_Sculpture/input/SfM/00_sculpture/: 00_sculpture_project.ini  moto-g-power-2022.intrinsic
C++/OpenCV/10_Sculpture/za_Spare_Parts/: Calibrate_w_Distortion.cpp  OGL_Display.cpp  OGL_UI.hpp
C++/OpenCV/za_Archive/: 00-1_ORB-detect.cpp  00-3_edge-detect_2.cpp  00-4_AKAZE-detect.cpp  00_feat-detect.cpp  01_SfM_bgn.cpp  03_stolen-structs.cpp  utils.h
C++/OpenCV/zb_MATLAB/: baselines.mat  cam_pos_true.mat  extract_point_cloud.m  plot_pclouds_before_after_reg.m
C++/OpenCV/zb_MATLAB/src/: feature_tracking.m  plot_point_cloud.m  shape_reconstruction.m
C++/OpenGL/: 00_restart.cpp  CMakeLists.txt  DEV_PLAN.md  LightSource.cpp  OGL_utils.cpp  gears.c  geometry.cpp  geometry.hpp  load_assets.cpp  make.sh  math_glm.cpp  toolbox.hpp  utils.cpp
C++/OpenGL/00_Cpp_Restart/: MathGeo.cpp  OGL_utils.cpp  OGL_utils.h  OGL_utils.hpp  Restart.cpp
C++/OpenGL/Icos_Lighting/: DH_Robot.h  HW5.cpp  README.txt  ToyBox.cpp
C++/OpenGL/Icos_Texture/: CMakeLists.txt  README.txt  ToyBox.cpp  ToyBox.h  build_HW.sh  zip_submission.sh
C++/OpenGL/Lorenz_Attractor/: OGL_utils.c  OGL_utils.h  makefile
C++/OpenGL/Robot_Arm/: CMakeLists.txt  HW3.cpp  OGL_utils.h
C++/OpenGL/astrophysics/: install.md
C++/OpenGL/astrophysics/PUNCH/: 00_load-file.cpp  01_load-punch-params.cpp  02_viz-one-pair.cpp  03_viz-one-frame.cpp  FITS_Notes.txt  PUNCH.cpp
C++/OpenGL/astrophysics/scripts/: PUNCH_DL.py
C++/OpenGL/helpers/: config.hpp
C++/OpenGL/include/: PUNCH.hpp  geometry.hpp  math_glm.hpp  toolbox.hpp  utils.hpp
C++/OpenGL/z_Archive/Icos_Lighting/: CMakeLists.txt  MathGeo.h  zip_submission.sh
C++/OpenGL/z_Archive/Icos_Texture/: HW6.cpp  MathGeo.cpp  MathGeo.h  OGL_utils.cpp
C++/OpenGL/z_Archive/Robot_Arm/: OGL_utils.cpp  README.txt  zip_submission.sh
C++/OpenGL/z_Archive/geometry/: model.hpp
C++/OpenGL/z_Archive/src/: Makefile  vboSimple.cbp
C++/OpenGL/za_Archive/Icos_Lighting/: ToyBox.h
C++/OpenGL/za_Archive/Icos_Texture/: OGL_utils.h
C++/OpenGL/za_Archive/Robot_Arm/: nd_vector.h
C++/OpenGL/za_Archive/tests/: test01_defaults.cpp
C++/OpenGL/zb_Archive/: 01_rand-cyl.cpp  OGL_Geo.hpp  OGL_utils.hpp  OpenGL_MAIN_TEMPLATE.cpp
C++/OpenGL/zb_Archive/00_Cpp_Restart/: OGL_Geo.hpp  OGL_utils.hpp  Restart.cpp
C++/Raylib/: 00_test.cpp  01-0_hello-triangle.cpp  01-1_hello-colors.cpp  01_cube.cpp  02-0_perlin-terrain.cpp  02_perlin.cpp  03_mesh-gen.cpp  03_simple-terrain.cpp  04-1_mesh-class.cpp  04_height-map.cpp  04_mesh-gen.cpp  05_TriMesh.cpp  06_mesh-terrain.cpp  07_cel-shading.cpp  08_RL-JS-detect.cpp  08_SDL-JS-detect.cpp  09_glider-terrain.cpp  10_bloom.cpp  11-0_lrg-terrain.cpp  11_inf-terrain.cpp  12-0_icos-colors.cpp  12-0_icos-plain.cpp  12-1_icos-colors.cpp  12-1_rlBegin-Plume.cpp  12-2_icos-party.cpp  12-3_stateful-hoop.cpp  12_lrg-terrain.cpp  12_synthwave-dream.cpp  13_boids.cpp  13_synthwave-dream.cpp  14-1_shiny-sphere.cpp  14-2_shiny-ribbon.cpp  14-3_MVP-cube.cpp  14_boid-ribbons.cpp  15_MVP-cube.cpp  16_dyn-cube.cpp  17-2_use-model.cpp  17-3_many-model.cpp  17_dyn-ribbons.cpp  17_shiny-icos.cpp  (+25 more)
C++/SDL2/: 08_SDL-JS-detect.cpp
C++/ncurses/: 00_hello-ncurses.cpp  01_init.cpp  02_coords.cpp  03_window.cpp
C++/openFrameworks/: Install.md
C++/tests/: test02_drawCube.cpp
C/GA/: 00_mult3.c  01_mult3.c  DEV_PLAN.md  makefile
C/OpenGL/: 00_Dyn-6D.c  00_VAO.c  00_character.c  00_restart.c  01_Planet-Geom.c  01_VAO.c  01_perspective.c  01_scroll-txtr.c  02_VAO_VNC_f.c  02_VAO_VNT_f.c  03_Tetra-Tank_js.c  03_atmos-CPU.c  03a_tri-test.c  04_Sparkle.c  04_tetra-net-test.c  05_Chopperhedron.c  05_atmos-GPU.c  06_Behavior-Tree.c  06_mini-comp.c  07_BT-Animation.c  AdvClass.h  DEV_PLAN.md  OGL_Geo.h  OGL_Tools.h  OGL_Utils.h  OGL_base.h  OGL_utils.c  PolyNet.h  TriNet.c  TriNet.h  VAO_VNC_f.c  VNCT_f.c  ZZ_TriNet.h  ZZ_Utils.h  behavior.c  draw_geo.c  geometry.h  load_assets.c  makefile  matrix4x4f.c  (+6 more)
d/raylib/: README.md
geometry/: geoSketch.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp
helpers/: OGL_utils.cpp  OGL_utils.hpp  config.hpp
java/: HeadFirstDsgnPatterns_2nd-Ed.md
java/aaTest1/: ActiveObject.java  Engine.java  GameObject.java  Painter.java  Rampart2.java  Tile.java  aa_DEV_PLAN.md  aa_DEV_PLAN.mp
java/ab_OpenGL_Ex/: RedTriangle.java  RedTriangleOLD.java
java/ac_Swing_Ex/: AnimatedRectangle.java  RedRectangleOnBlack.java
java/ad_Swing_kb/: KeyEventDemo.java  KeyEventMain.java
julia/ModernGL/: 00_test.jl  01_tetra.jl  02_cube.jl  readme.md  util.jl  vbo.vert
nim/: glfwTest.nim  openGLtest.nim
python/: 01_helloWorld.py
python/OGRE/: 00_test.py  01_window.py  02_scene.py  03_jup38_test.ipynb  README.md  SceneManager-contents.txt  resources.cfg  robot.skeleton
python/arcade/: 01_template.py  02_trees.py  03_primitives.py  04_ShapeElementList.py  20_mouseInteraction.py  21_kb_interaction.py  23_playerShoot.py  30_chasing.py  31_enemyShoot.py  (+12 more)
tests/: test01_defaults.cpp  test02_drawCube.cpp
(+280 files in other folders)
